Fix bug that displayed double vertical scrollbars in needfeed for NO separate window view

--- a/client/css/needfeed.css
+++ b/client/css/needfeed.css
@@ -2,7 +2,7 @@
 	width: 300px;
 	float: left;
 	height: calc( 100% - 52px );
-	overflow-y: scroll;
+    /* overflow-y: scroll; */ /* JF: This caused double vertical scroll bar in non-"separate window" view */
 	position: relative;
 }
 
